[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfstools"
version = "0.1.2"
authors = [
  { name="Jake Bridge", email="bridge.jake@gmail.com" },
]
description = "Tools for my regular use. Particular to our work environment: SQL Server with Windows authentication"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.ucsf.edu/Jacob-Bridge/pfs-data-tools"
"Bug Tracker" = "https://git.ucsf.edu/Jacob-Bridge/pfs-data-tools/issues"